@@ -13,6 +13,10 @@ Removed deprecated classes
 * removed net.sourceforge.cruisecontrol.publishers.CurrentBuildStatusPublisher
 * removed net.sourceforge.cruisecontrol.publishers.CurrentBuildStatusFTPPublisher
 
+Removed deprecated methods
+----------------------
+* P4Bootstrapper, Log, ModificationSet   
+
 TwitterPublisher
 ----------------------
 * Add a new plugin for publishing build results to Twitter.
